# psbapp-wtrpmp

./: .prettierrc.yml  README.md  bitbucket-pipelines.yml  deploy.sh
api/authorizer/: .gitignore  .prettierignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
api/authorizer/src/: captcha-authorizer.ts
api/authorizer/test/: captcha-authorizer.test.ts
api/get_place/: main.py
api/like_place/: main.py
api/post_place/: cap_to_istat.py  main.py
api/search/: cdk-build.sh  package-lock.json  package.json  tsconfig.json
api/search_location/: main.py
config-writer/: cdk-build.sh
config-writer/config_writer/: index.py
design/: openapi.yml
etl/dynamo-to-es/: README.md  cdk-build.sh  conftest.py  pyproject.toml  requirements.txt
etl/dynamo-to-es/dynamo_to_es/: main.py
etl/import-wtrpmp/: README.md  cdk-build.sh  conftest.py  pyproject.toml  requirements.txt
etl/import-wtrpmp/import_wtrpmp/: main.py
infrastructure/: README.md  cdk.json  package-lock.json  package.json
infrastructure/lib/: apigateway-construct.ts  auth-construct.ts  config-env-writer.ts  core-construct.ts  infrastructure-stack.ts  open-api.ts  search-construct.ts  usermanagement-construct.ts  webapp-stack.ts
scripts/ES_place_index_creation/: __main__.py  es-mapping.json  readme.md  requirements.txt
website/: angular.json  cdk-build.sh  karma.conf.js  package-lock.json  package.json
website/mock/: entities.ts  index.ts
website/src/: customtheme.scss  index.html  main.ts  pinpoint.ts  polyfills.ts  schema.ts  styles.scss  variables.scss
(+78 files in other folders)
